--- a/Guidelines_3_1_GuidelinesList.adoc
+++ b/Guidelines_3_1_GuidelinesList.adoc
@@ -1,20 +1,20 @@
-// (C) Copyright 2014-2018 The Khronos Group Inc. All Rights Reserved.
+// (C) Copyright 2014-2019 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
 //
 // Text format: asciidoc 8.6.9
-// Editor:      Asciidoc Book Editor
+// Editor:      Atom
 //
 // Description: Guidelines 3.1 Guidelines  list
 //
-// Notes: The hyperlink ID, <<gh?????,?>> for each requirement orguideline in
-//        this documents is a representaion of Khronos SCAP Bugzilla issue
+// Notes: The hyperlink ID, <<gh?????,?>> for each requirement or guideline in
+//        this documents is a representation of Khronos SCAP Bugzilla issue
 //        tracking number. The letter 'gh' before the number must be present for
 //        Asciidoc to accept and create a hyperlink.
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.052
+:Revision: 0.057
 
 ifdef::basebackend-docbook[]
 === Guidelines list
@@ -24,6 +24,8 @@ ifdef::basebackend-html[]
 endif::[]
 
 The following is a list of all the KSCAF guidelines when considering designing and implementing a SC API.
+
+Note the appendices also contain useful topics.
 
 .List of guidelines
 [caption="Table {counter:table-id}: ", cols="^4,10", width="90%", options="header", frame="topbot"]
@@ -48,4 +50,11 @@ The following is a list of all the KSCAF guidelines when considering designing a
 |<<gh29,{counter:section-id}>>    | Development out of context
 |<<gh30,{counter:section-id}>>    | Provide initialisation and shutdown functions
 |<<gh31,{counter:section-id}>>    | Perform a hazard risk analysis and create a safety goals report
+|=============================
+
+.List of appendices
+[caption="Table {counter:table-id}: ", cols="^4,10", width="90%", options="header", frame="topbot"]
+|=============================
+|Appendices | Description
+|<<appendix_a, Appendix A>>  | OpenVX SC Tag ID Generator method and tools
 |=============================
