--- a/Guidelines_Appendices.adoc
+++ b/Guidelines_Appendices.adoc
@@ -1,22 +1,22 @@
-// (C) Copyright 2014-2018 The Khronos Group Inc. All Rights Reserved.
+// (C) Copyright 2014-2019 The Khronos Group Inc. All Rights Reserved.
 // Khronos Group Safety Critical API Development SCAP
 // document
 //
 // Text format: asciidoc 8.6.9
-// Editor:      Asciidoc Book Editor
+// Editor:      Atom
 //
 // Description: Guidelines Appendices
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.04
+:Revision: 0.057
 
 // Automatic appendix lettering, use {counter:appendix-id}
 :appendix-id: @
 
 Appendices
 ----------
-include::Guidelines_Appendix_A_1.adoc[]
+include::Guidelines_Appendix_A_OpenVX_SC_TagID_Generator.adoc[]
 
 <<<
-include::Guidelines_Appendix_B_1.adoc[]
+// include::Guidelines_Appendix_B_1.adoc[]
