--- a/GuidelinesListDocChanges.adoc
+++ b/GuidelinesListDocChanges.adoc
@@ -12,7 +12,7 @@
 
 :Author: Illya Rudkin (spec editor)
 :Author Initials: IOR
-:Revision: 0.058
+:Revision: 0.059
 
 _Version: {doc_version}_  +
 _Document Revision: {doc_revision}_ +
@@ -41,6 +41,7 @@ List of the changes that have occurred between one or more releases.
 |0.055    | 2019-04-16                   | Apply Etem Deniz recommendations for fixes or changes
 |0.056    | 2019-04-16                   | Update the Khronos copyright year from '18 to '19
 |0.057    | 2019-06-24                   | Add new appendix for OpenVX SC Tag ID Generator method and tools
-|0.058    | 2019-08-15                   | Change the Khronos copyright page to have the Creative Commons CC BY-SA text 
+|0.058    | 2019-08-15                   | Change the Khronos copyright page to have the Creative Commons CC BY-SA text
+|0.059    | 2019-08-15                   | Updated the document's list of contribution acknowledgements
 //|x.x      | [red yellow-background]#???# |
 |=============================
